# EMRI_Ringdown_QNM_Fits

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
fitrd/: fitrd.py
notebooks/: ex1_measuring_amplitudes.ipynb  ex2_algorithm_comparison.ipynb
src/fitrd/: fitrd.py
tests/: test_fitrd.py
