[metadata]
name = fitrd
version = 0.1.0
author = Halston Lim
author_email = hblim@mit.edu
description = Code to fit quasi-normal modes to ringdown waveforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/halstonblim/EMRI_Ringdown_QNM_Fits
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


